# litestar-auth

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  context7.json  demo_litestar_auth.db  justfile  pyproject.toml  zensical.toml
.github/codeql/: codeql-config.yml
.github/workflows/: 1_test.yml  2_bump.yml  2_rollback.yml  3_release.yml  4_codeql.yml  5_dependency_review.yml
docs/: __init__.py  configuration.md  contributing.md  deployment.md  errors.md  exceptions.md  guards.md  http_api.md  index.md  install.md  migration.md  quickstart.md  roadmap.md  security.md
docs/api/: authentication.md  contrib_redis.md  controllers.md  db.md  exceptions.md  guards.md  manager.md  models.md  oauth.md  package.md  password.md  plugin.md  ratelimit.md  schemas.md  strategies.md  totp.md  transports.md  types.md
docs/concepts/: architecture.md  backends.md  request_lifecycle.md
docs/configuration/: api_keys.md  backends.md  extensions.md  manager.md  oauth.md  organizations.md  redis.md  security.md  totp.md  user_and_manager.md
docs/cookbook/: api_keys.md  cookie_csrf.md  custom_user_oauth.md  oauth_associate.md  refresh_cookie.md  role_admin_controller.md  role_admin_tests.md
docs/guides/: api_keys.md  extending.md  from_fastapi_users.md  hooks.md  oauth.md  rate_limiting.md  registration.md  role_admin_http.md  roles_cli.md  security.md  testing.md  totp.md
docs/snippets/: __init__.py  home_quick_peek.py  oauth_account_audit_model.py  plugin_security_tradeoffs.md  quickstart_plugin.py
examples/: __init__.py  _demo_secrets.py
examples/demo_api_keys_role_scopes/: __init__.py  __main__.py  app.py
examples/demo_cookie_jwt/: __init__.py  __main__.py  app.py
examples/demo_cookie_jwt_totp/: __init__.py  __main__.py  app.py
examples/demo_db_token_refresh/: __init__.py  __main__.py  app.py
examples/demo_external_extension/: README.md  __init__.py  __main__.py  app.py  extension.py
examples/demo_jwt_api_keys/: __init__.py  __main__.py  app.py
examples/demo_jwt_api_keys_totp/: __init__.py  __main__.py  app.py
examples/demo_totp/: __init__.py  __main__.py  app.py
litestar_auth/: __init__.py  _account_state.py  _api_key_model_mixin.py  _auth_model_mixins.py  _clock.py  _compat.py  _concurrency.py  _current_organization.py  _email.py  _error_codes.py  _jwt_headers.py  _keyed_digest.py  _locks.py  _oauth_mapper_events.py  _optional_deps.py  _organization_authz.py  _permissions.py  _redis_protocols.py  _roles.py  _schema_fields.py  _secret_roles.py  _secrets_at_rest.py  _superuser_role.py  _tenant_resolution.py  _totp_enrollment.py  _totp_primitive.py  _totp_recovery.py  _totp_stores.py  _totp_verify.py  config.py  exceptions.py  extensions.py  manager.py  models.py  oauth_encryption.py  password.py  payloads.py  plugin.py  ratelimit.py  schemas.py  (+3 more)
litestar_auth/_manager/: __init__.py  _coercions.py  _protocols.py  account_tokens.py  api_key_config.py  api_key_creation.py  api_key_facade.py  api_key_row.py  api_key_secrets.py  api_key_service.py  api_keys.py  construction.py  hooks.py  security.py  totp_facade.py  totp_secrets.py  user_lifecycle.py  user_policy.py
litestar_auth/_plugin/: __init__.py  _hooks.py  _oauth_controllers.py  _protocols.py  _redirect_validation.py  _totp_controller.py  advanced_alchemy.py  api_key.py  api_key_validation.py  auth_controller.py  backend_inventory.py  config.py  controller_factory.py  controllers.py  database_token.py  dependencies.py  exception_handlers.py  feature_configs.py  middleware.py  oauth_contract.py  oauth_validation.py  openapi.py  organization_cli.py  rate_limit.py  role_admin.py  role_admin_contracts.py  role_cli.py  role_lifecycle.py  role_model_family.py  scoped_session.py  security_policy.py  session_binding.py  startup.py  totp_route_handlers.py  totp_validation.py  user_manager_builder.py  validation.py
litestar_auth/authentication/: __init__.py  authenticator.py  backend.py  middleware.py
litestar_auth/contrib/: __init__.py
litestar_auth/controllers/: __init__.py  _api_key_admin.py  _api_key_common.py  _api_key_rate_limit.py  _api_key_self.py  _auth_helpers.py  _auth_login.py  _auth_refresh.py  _auth_routes.py  _error_responses.py  _oauth_assembly.py  _oauth_associate_routes.py  _oauth_authorize_routes.py  _oauth_helpers.py  _oauth_login_handlers.py  _request_body.py  _response_timing.py  _session_devices_handlers.py  _step_up.py  _step_up_payloads.py  _totp_confirm_handlers.py  _user_schema.py  _users_handlers.py  _users_helpers.py  _users_routes.py  _utils.py  api_keys.py  auth.py  oauth.py  organization.py  register.py  reset.py  session_devices.py  totp.py  totp_context.py  totp_contracts.py  totp_handlers.py  totp_routes.py  totp_session_handlers.py  users.py  (+1 more)
litestar_auth/db/: __init__.py  _contract.py  _repositories.py  _sqlalchemy_api_keys.py  _sqlalchemy_organizations.py  base.py  sqlalchemy.py
litestar_auth/guards/: __init__.py  _api_key_guards.py  _guards.py  _organization_guards.py  _permission_guards.py  _protocol_narrowing.py
litestar_auth/models/: __init__.py  _oauth_encrypted_types.py  api_key.py  mixins.py  oauth.py  organization.py  role.py  tokens.py  user.py  user_relationships.py
tests/: README.md  __init__.py  _helpers.py  conftest.py  test_imports.py
tests/e2e/: __init__.py  (+7 more)
(+275 files in other folders)
